--- a/vertical_bar_chart_wizard.ipynb
+++ b/vertical_bar_chart_wizard.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOytrAxOgIN6NTOQeELu7v4",
+      "authorship_tag": "ABX9TyPLkw+PDrkUqTt5Qcaikmrj",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -177,6 +177,7 @@
       "source": [
         "\n",
         "#leave this alone\n",
+        "fig, ax = plt.subplots()\n",
         "x = df[column_name_that_contains_x_axis_labels]\n",
         "y = df[column_name_that_contains_y_axis_values]\n",
         "\n",
@@ -186,6 +187,7 @@
         "plt.xlabel(x_title, fontsize = xlab_fontsize)\n",
         "plt.ylabel(y_title, fontsize = ylab_fontsize)\n",
         "plt.title(title, fontsize = title_fontsize)\n",
+        "fig.set_size_inches(x_dimension, y_dimension)\n",
         "plt.show()"
       ],
       "metadata": {
